--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+q {
+    font-size: 20px;
+}
+
 a,
 button {
     transition: all .3s ease-in-out;
@@ -677,7 +681,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 16px;    /* passage de 11 à 16px pour une meilleure lisibilité */
 }
 
 .tight-width-whitespace {
